[tool.poetry]
name = "netflix"
version = "0.1.1"
description = "A Python client for Netflix."
authors = ["Efe Öge <efeoge@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/efe/netflix"
repository = "https://github.com/efe/netflix"
keywords = ["python", "netflix", "movie", "tv-show"]
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "!=3.0, !=3.1, !=3.2, !=3.3, !=3.4, <4"
requests = { version = ">=2.0"}
beautifulsoup4 = { version = ">=4.0"}

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
